--- a/music_controller/package.json
+++ b/music_controller/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.16.1",
+    "react": "^17.0.2",
     "react-router-dom": "^6.24.1"
   }
 }
